Fix alignment of header text

--- a/src/menuStyle.css
+++ b/src/menuStyle.css
@@ -28,15 +28,19 @@ body {
     height: 5rem;
     background: #7B2CBF;
     display: grid;
-    grid-template-columns: 95px 1fr;
+    grid-template-columns: 4rem 1fr;
+    gap: 10px;
     align-items: center;
-    justify-items: center;
     text-align: center;
 }
 
 .header h1{
+    height: 100%;
+    width: 87%;
     grid-column: 2/3;
-    justify-self: start;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu-btn {
